--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1 id="title">Whack a Teemo!</h1>
     <div>
       <div>
-        <h2>Click start to play!</h2>
+        <h2>Click <button id="start">Start!</button> start to play!</h2>
       </div>
       <div>
         <h2>score: <span id="score">0</span></h2>
@@ -45,7 +45,6 @@
       </div>
       <!--TODO: Add the missing holes and moles. -->
     </div>
-    <button id="start">Start!</button>
     <script src="./src/index.js"></script>
   </body>
 </html>
